Revision history for Perl extension Test::Harness

NEXT
    [ENHANCEMENTS]
    * Added test straps overload via HARNESS_STRAP_OVERLOAD environment
      variable.  prove now takes a --strap=class parameter.  Thanks,
      Adam Kennedy.

2.63_01 Fri Jun 30 16:59:50 CDT 2006
    [ENHANCEMENTS]
    * Failed tests used to say "NOK x", and now say "NOK x/y".
      Thanks to Will Coleda.

    * Added the Test::Harness::Results object, so we have a well-defined
      object, and not just a hash that we pass around.  Thanks to YAPC::NA
      2006 Hackathon!

2.62 Thu Jun  8 14:11:57 CDT 2006
    [FIXES]
    * Restored the behavior of dying if any subtests failed.  This is a
      pretty crucial bug that I should have fixed long ago.  Not having this
      means that CPANPLUS will install modules even if their tests fail. :-(

2.60 Wed May 24 14:48:44 CDT 2006
    [FIXES]
    * Fixed the headers in the summary failure table.

2.58 Sat May 13 22:53:53 CDT 2006
    No changes.  Released to the world with a non-beta number.

2.57_06 Sun Apr 23 00:55:43 CDT 2006
    [THINGS THAT MIGHT BREAK YOUR CODE]
    * Anything that displays a percentage of tests passed has been
      removed.  Output at the end of failing runs is now different.

    [FIXES]
    * Fixed the TODO-passing patch from 2.57_05.

    [ENHANCEMENTS]
    * The unnecessary display of percentages of tests passing and failing
      have been removed.  Tests are not a percentage game.

    * Caches the results of _default_inc(), which is expensive because
      of shelling out to get the pathnames.  Benchmarking was showing that
      15% of Test::Harness's time was spent in this function.  For test
      suites with many test files, this can be significant.  With this
      speedup, the "make test" for the Perl core speeds up 2.5%.
      Thanks to Nicholas Clark for finding this.

    [DOCUMENTATION]
    * Fixed HARNESS_PERL_SWITCHES typo.  Thanks, Andreas Koenig.
