@@ -4,6 +4,7 @@ use strict;
 use vars qw($VERSION);
 $VERSION = '0.01';
 
+use File::Spec;
 use Exporter;
 use vars qw( @ISA @EXPORT @EXPORT_OK );
 
