@@ -18,7 +18,7 @@ plan skip_all => "Not installing prove" if -e "t/SKIP-PROVE";
 # http://rt.perl.org/rt3/Ticket/Display.html?id=30952.
 plan skip_all => "Skipping because of a Cygwin bug" if ( $^O =~ /cygwin/i );
 
-plan tests => 5;
+plan tests => 8;
 
 my $blib = File::Spec->catfile( File::Spec->curdir, "blib" );
 my $blib_lib = File::Spec->catfile( $blib, "lib" );
@@ -28,7 +28,6 @@ $prove = "$^X $prove";
 
 CAPITAL_TAINT: {
     local $ENV{PROVE_SWITCHES};
-    local $/ = undef;
 
     my @actual = qx/$prove -Ifirst -D -I second -Ithird -Tvdb/;
     my @expected = ( "# \$Test::Harness::Switches: -T -I$blib_arch -I$blib_lib -Ifirst -Isecond -Ithird\n" );
@@ -37,7 +36,6 @@ CAPITAL_TAINT: {
 
 LOWERCASE_TAINT: {
     local $ENV{PROVE_SWITCHES};
-    local $/ = undef;
 
     my @actual = qx/$prove -dD -Ifirst -I second -t -Ithird -vb/;
     my @expected = ( "# \$Test::Harness::Switches: -t -I$blib_arch -I$blib_lib -Ifirst -Isecond -Ithird\n" );
@@ -46,7 +44,6 @@ LOWERCASE_TAINT: {
 
 PROVE_SWITCHES: {
     local $ENV{PROVE_SWITCHES} = "-dvb -I fark";
-    local $/ = undef;
 
     my @actual = qx/$prove -Ibork -Dd/;
     my @expected = ( "# \$Test::Harness::Switches: -I$blib_arch -I$blib_lib -Ifark -Ibork\n" );
@@ -54,17 +51,25 @@ PROVE_SWITCHES: {
 }
 
 PROVE_SWITCHES_L: {
-    local $/ = undef;
-
     my @actual = qx/$prove -l -Ibongo -Dd/;
     my @expected = ( "# \$Test::Harness::Switches: -Ilib -Ibongo\n" );
     is_deeply( \@actual, \@expected, "PROVE_SWITCHES OK" );
 }
 
 PROVE_SWITCHES_LB: {
-    local $/ = undef;
-
     my @actual = qx/$prove -lb -Dd/;
     my @expected = ( "# \$Test::Harness::Switches: -Ilib -I$blib_arch -I$blib_lib\n" );
     is_deeply( \@actual, \@expected, "PROVE_SWITCHES OK" );
+}
+
+PROVE_VERSION: {
+    # This also checks that the prove $VERSION is in sync with Test::Harness's $VERSION
+    local $/ = undef;
+
+    use_ok( 'Test::Harness' );
+
+    my $thv = $Test::Harness::VERSION;
+    my @actual = qx/$prove --version/;
+    is( scalar @actual, 1, 'Only 1 line returned' );
+    like( $actual[0], qq{/^\Qprove v$thv, using Test::Harness v$thv and Perl v5\E/} );
 }
