@@ -1,6 +1,12 @@
 Revision history for Perl extension Test::Harness
 
 NEXT
+    [FIXES]
+    * prove's --perl=/path/to/file wasn't taking a value.
+    * prove's version number was not getting incremented.  From now on,
+      prove's $VERSION will match Test::Harness's $VERSION, and I added
+      a test to make sure this is the case.
+
     [ENHANCEMENTS]
     * Added test straps overload via HARNESS_STRAP_OVERLOAD environment
       variable.  prove now takes a --strap=class parameter.  Thanks,
